<resources>
    <string name="app_name">MyToDoList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_note_item">Добавление заметки</string>
    <string name="save_note">Сохранить</string>
    <string name="name_of_the_note">Название заметки</string>
    <string name="text_of_the_note">Текст заметки</string>
    <string name="priority">Приоритет</string>
    <string name="low">Низкий</string>
    <string name="medium">Средний</string>
    <string name="high">Высокий</string>
    <string name="error_invalid_name">Invalid name</string>
    <string name="error_invalid_text">Invalid text</string>

</resources>